abbreviated bibtex journals using https://gist.github.com/FilipDominec/9ff081952dbc4aae1df657a56c3db4ea

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -167,7 +167,7 @@
   year={2014},
   publisher={Optical Society of America}
 }
-% TODO Optics Express, Vol. 22, Issue 19, pp. 23034-23042 (2014) http://dx.doi.org/10.1364/OE.22.023034
+% TODO Opt. Express, Vol. 22, Issue 19, pp. 23034-23042 (2014) http://dx.doi.org/10.1364/OE.22.023034
 @inproceedings{mitrofanov2014nearirmmw,
   title={Near-field probing of the THz Mie magnetic mode in a single sub-wavelength TiO 2 sphere},
   author={Mitrofanov, Oleg and Dominec, Filip and Navarro-Cia, M and Kuzel, Petr and Reno, John L and Brener, Igal and Mounaix, Patrick},
@@ -273,7 +273,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{skoromets2013,
   title={Electric-field-tunable defect mode in one-dimensional photonic crystal operating in the terahertz range},
   author={Skoromets, V and N{\v{e}}mec, H and Kadlec, C and Fattakhova-Rohlfing, D and Ku{\v{z}}el, P},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={102},
   number={24},
   pages={241106},
@@ -547,7 +547,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   number={5775},
   pages={892--894},
   year={2006},
-  publisher={American Association for the Advancement of Science}
+  publisher={American Association for the Adv. Sci.}
 }
 @article{zheludev2010road,
   title={The road ahead for metamaterials},
@@ -651,7 +651,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{chen2006derivation,
   title={Derivation and characterization of dispersion of defect modes in photonic band gap from stacks of positive and negative index materials},
   author={Chen, YH and Liang, GQ and Dong, JW and Wang, HZ},
-  journal={Physics Letters A},
+  journal={Phys. Lett. A},
   volume={351},
   number={6},
   pages={446--451},
@@ -676,7 +676,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{wang2004omnidirectional,
   title={Omnidirectional gap and defect mode of one-dimensional photonic crystals with single-negative materials},
   author={Wang, Li-Gang and Chen, Hong and Zhu, Shi-Yao},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={70},
   number={24},
   pages={245102},
@@ -700,7 +700,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{rybin2014photonic,
   title={Photonic properties of two-dimensional high-contrast periodic structures: Numerical calculations},
   author={Rybin, MV and Sinev, IS and Samusev, KB and Hosseinzadeh, A and Semouchkin, GB and Semouchkina, EA and Limonov, MF},
-  journal={Physics of the Solid State},
+  journal={Phys. Solid State},
   volume={56},
   number={3},
   pages={588--593},
@@ -716,7 +716,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{prosvirnin2015planar,
   title={Planar all-silicon metamaterial for terahertz applications},
   author={Prosvirnin, Sergey L and Dmitriev, Victor A and Kuleshov, Yeugenii M and Khardikov, Vyacheslav V},
-  journal={Applied Optics},
+  journal={Appl. Opt.},
   volume={54},
   number={13},
   pages={3986--3990},
@@ -734,7 +734,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{chen2004robust,
   title={Robust method to retrieve the constitutive effective parameters of metamaterials},
   author={Chen, Xudong and Grzegorczyk, Tomasz M and Wu, Bae-Ian and Pacheco Jr, Joe and Kong, Jin Au},
-  journal={Physical Review E},
+  journal={Phys. Rev. E},
   volume={70},
   number={1},
   pages={016608},
@@ -755,7 +755,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{yang2010retrieving,
   title={Retrieving the effective parameters of metamaterials from the single interface scattering problem},
   author={Yang, Jianji and Sauvan, Christophe and Paul, T and Rockstuhl, C and Lederer, F and Lalanne, Philippe},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={97},
   number={6},
   pages={061102},
@@ -765,7 +765,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{menzel2008retrieving,
   title={Retrieving effective parameters for metamaterials at oblique incidence},
   author={Menzel, Christoph and Rockstuhl, Carsten and Paul, Thomas and Lederer, Falk and Pertsch, Thomas},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={77},
   number={19},
   pages={195328},
@@ -805,7 +805,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{silveirinha2007metamaterial,
   title={Metamaterial homogenization approach with application to the characterization of microstructured composites with negative parameters},
   author={Silveirinha, M{\'a}rio G},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={75},
   number={11},
   pages={115104},
@@ -815,7 +815,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{smith2005electromagnetic,
   title={Electromagnetic parameter retrieval from inhomogeneous metamaterials},
   author={Smith, D R and Vier, DC and Koschny, Th and Soukoulis, CM},
-  journal={Physical Review E},
+  journal={Phys. Rev. E},
   volume={71},
   number={3},
   pages={036617},
@@ -846,7 +846,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{terao2011,
   title={Finite-difference frequency-domain method to study photonic crystals with dispersive metamaterials},
   author={Terao, Takamichi},
-  journal={Japanese Journal of Applied Physics},
+  journal={Japanese J. Appl. Phys.},
   volume={50},
   number={10},
   pages={2204},
@@ -867,7 +867,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{markel2013current,
   title={Current-driven homogenization and effective medium parameters for finite samples},
   author={Markel, Vadim A and Tsukerman, Igor},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={88},
   number={12},
   pages={125131},
@@ -924,7 +924,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{vanwolleghem2009unidirectional,
   title={Unidirectional band gaps in uniformly magnetized two-dimensional magnetophotonic crystals},
   author={Vanwolleghem, Mathias and Checoury, Xavier and {\'S}migaj, Wojciech and Gralak, Boris and Magdenko, Liubov and Postava, Kamil and Dagens, B{\'e}atrice and Beauvillain, Pierre and Lourtioz, Jean-Michel},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={80},
   number={12},
   pages={121102},
@@ -976,7 +976,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{laktionov2008,
   title={Mechanism of formation of band gaps in one-dimensional photonic quasi-crystals},
   author={Laktionov, AA and Merzlikin, AM and Vinogradov, AP},
-  journal={Journal of Communications Technology and Electronics},
+  journal={J. Commun. Technol. Electron.},
   volume={53},
   number={8},
   pages={890--894},
@@ -990,7 +990,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{plihal1991two,
   title={Two-dimensional photonic band structures},
   author={Plihal, M and Shambrook, A and Maradudin, AA and Sheng, Ping},
-  journal={Optics Communications},
+  journal={Opt. Commun.},
   volume={80},
   number={3},
   pages={199--204},
@@ -1000,7 +1000,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{foteinopoulou2003negative,
   title={Negative refraction and left-handed behavior in two-dimensional photonic crystals},
   author={Foteinopoulou, S and Soukoulis, CM},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={67},
   number={23},
   pages={235107},
@@ -1014,7 +1014,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{naik2011oxides,
   title={Oxides and nitrides as alternative plasmonic materials in the optical range},
   author={Naik, Gururaj V and Kim, Jongbum and Boltasseva, Alexandra},
-  journal={Optical Materials Express},
+  journal={Opt. Mater. Express},
   volume={1},
   number={6},
   pages={1090--1099},
@@ -1025,7 +1025,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{veselago1968,
   title={The Electrodynamics of Substances with Simultaneously Negative Values of $\varepsilon$ and $\mu$},
   author={Veselago, Victor Georgievich},
-  journal={Physics-Uspekhi},
+  journal={Phys. Usp.},
   volume={10},
   number={4},
   pages={509--514},
@@ -1070,7 +1070,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{richtmyer1939dielectric,
   title={Dielectric resonators},
   author={Richtmyer, RD},
-  journal={Journal of Applied Physics},
+  journal={J. Appl. Phys.},
   volume={10},
   number={6},
   pages={391--398},
@@ -1091,7 +1091,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{lewin1947electrical,
   title={The electrical constants of a material loaded with spherical particles},
   author={Lewin, L},
-  journal={Journal of the Institution of Electrical Engineers-Part III: Radio and Communication Engineering},
+  journal={J. Inst. Electr. Eng.-Part III: Radio and Communication Engineering},
   volume={94},
   number={27},
   pages={65--68},
@@ -1146,7 +1146,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{yang2015,
   title={Terahertz magnetic and electric Mie resonances of an all-dielectric one-dimensional grating},
   author={Yang, Yuping and Cui, Bin and Geng, Zhaoxin and Feng, Shuai},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={106},
   number={11},
   pages={111106},
@@ -1176,7 +1176,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{antonoyiannakis1997mie,
   title={Mie resonances and bonding in photonic crystals},
   author={Antonoyiannakis, MI and Pendry, JB},
-  journal={EPL (Europhysics Letters)},
+  journal={EPL (Europhys. Lett.)},
   volume={40},
   number={6},
   pages={613},
@@ -1231,7 +1231,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{zhao2009mie,
   title={Mie resonance-based dielectric metamaterials},
   author={Zhao, Qian and Zhou, Ji and Zhang, Fuli and Lippens, Didier},
-  journal={Materials Today},
+  journal={Mater. Today},
   volume={12},
   number={12},
   pages={60--69},
@@ -1286,7 +1286,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @inproceedings{gibbons2010scalable,
   title={Scalable cylindrical metallo-dielectric metamaterials},
   author={Gibbons, Nicholas and Kolle, Mathias and Baumberg, Jeremy J and Steiner, Ullrich},
-  booktitle={Quantum Electronics and Laser Science Conference},
+  booktitle={Quantum Electron. and Laser Science Conference},
   pages={JWA3},
   year={2010},
   organization={Optical Society of America}
@@ -1294,7 +1294,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{wang2011fiber,
   title={Fiber metamaterials with negative magnetic permeability in the terahertz},
   author={Wang, Anna and Tuniz, Alessandro and Hunt, Peter G and Pogson, Elise M and Lewis, Roger A and Bendavid, Avi and Fleming, Simon C and Kuhlmey, Boris T and Large, Maryanne CJ},
-  journal={Optical Materials Express},
+  journal={Opt. Mater. Express},
   volume={1},
   number={1},
   pages={115--120},
@@ -1324,7 +1324,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{wood1902remarkable,
   title={On a remarkable case of uneven distribution of light in a diffraction grating spectrum},
   author={Wood, Robert Williams},
-  journal={Proceedings of the Physical Society of London},
+  journal={Proc. Phys. Soc. London},
   volume={18},
   number={1},
   pages={269},
@@ -1346,7 +1346,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{rayleigh1907dynamical,
   title={On the dynamical theory of gratings},
   author={Rayleigh, Lord},
-  journal={Proceedings of the Royal Society of London. Series A, Containing Papers of a Mathematical and Physical Character},
+  journal={Proc. Roy. Soc. London. Series A, Containing Papers of a Mathematical and Physical Character},
   volume={79},
   number={532},
   pages={399--416},
@@ -1357,7 +1357,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{croenne2009left,
   title={Left handed dispersion of a stack of subwavelength hole metal arrays at terahertz frequencies},
   author={Cro{\"e}nne, Charles and Garet, Fr{\'e}d{\'e}ric and Lheurette, {\'E}ric and Coutaz, Jean-Louis and Lippens, Didier},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={94},
   number={13},
   pages={133112},
@@ -1407,7 +1407,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{wang2010composite,
   title={Composite left/right-handed stacked hole arrays at submillimeter wavelengths},
   author={Wang, Shengxiang and Garet, Fr{\'e}d{\'e}ric and Blary, Karine and Cro{\"e}nne, Charles and Lheurette, Eric and Coutaz, Jean-Louis and Lippens, Didier},
-  journal={Journal of Applied Physics},
+  journal={J. Appl. Phys.},
   volume={107},
   number={7},
   pages={074510},
@@ -1457,7 +1457,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{zhou2008efficient,
   title={An efficient way to reduce losses of left-handed metamaterials},
   author={Zhou, Jiangfeng and Koschny, Thomas and Soukoulis, Costas M},
-  journal={Optics Express},
+  journal={Opt. Express},
   volume={16},
   number={15},
   pages={11147--11152},
@@ -1467,7 +1467,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{rockstuhl2008light,
   title={Light propagation in a fishnet metamaterial},
   author={Rockstuhl, Carsten and Menzel, Christoph and Paul, Thomas and Pertsch, Thomas and Lederer, Falk},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={78},
   number={15},
   pages={155102},
@@ -1477,7 +1477,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{yahiaoui2012metallo,
   title={Metallo-dielectric Structure with Negative Refractive Index for Millimeter Applications},
   author={Yahiaoui, Riad and Vigneras, Val{\'e}rie and Mounaix, Patrick},
-  journal={International Journal of Remote Sensing Applications},
+  journal={Int. J. Remote Sens. Applications},
   volume={2},
   number={1},
   pages={46--49},
@@ -1486,7 +1486,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{ulrich1967effective,
   title={Effective low-pass filters for far infrared frequencies},
   author={Ulrich, R},
-  journal={Infrared Physics},
+  journal={Infrared Phys.},
   volume={7},
   number={2},
   pages={65--74},
@@ -1496,7 +1496,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{ulrich1967far,
   title={Far-infrared properties of metallic mesh and its complementary structure},
   author={Ulrich, Reinhard},
-  journal={Infrared Physics},
+  journal={Infrared Phys.},
   volume={7},
   number={1},
   pages={37--55},
@@ -1506,7 +1506,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{vogel1964transmission,
   title={Transmission and reflection of metallic mesh in the far infrared},
   author={Vogel, P and Genzel, L},
-  journal={Infrared Physics},
+  journal={Infrared Phys.},
   volume={4},
   number={4},
   pages={257--262},
@@ -1516,7 +1516,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{porterfield1994resonant,
   title={Resonant metal-mesh bandpass filters for the far infrared},
   author={Porterfield, David W and Hesler, JL and Densing, R and Mueller, ER and Crowe, TW and Weikle II, RM},
-  journal={Applied Optics},
+  journal={Appl. Opt.},
   volume={33},
   number={25},
   pages={6046--6052},
@@ -1558,7 +1558,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{zhang2005near,
   title={Near-infrared double negative metamaterials},
   author={Zhang, Shuang and Fan, Wenjun and Malloy, KJ and Brueck, SRJ and Panoiu, NC and Osgood, RM},
-  journal={Optics Express},
+  journal={Opt. Express},
   volume={13},
   number={13},
   pages={4922--4930},
@@ -1580,7 +1580,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{freire2008experimental,
   title={Experimental demonstration of a $\mu$=- 1 metamaterial lens for magnetic resonance imaging},
   author={Freire, Manuel J and Marques, Ricardo and Jelinek, Lukas},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={93},
   number={23},
   pages={231108},
@@ -1591,7 +1591,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{jelinek2011metamaterial,
   title={Metamaterial-inspired perfect tunnelling in semiconductor heterostructures},
   author={Jelinek, L and Baena, JD and Voves, J and Marques, R},
-  journal={New Journal of Physics},
+  journal={New J. Phys.},
   volume={13},
   number={8},
   pages={083011},
@@ -1649,7 +1649,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{tong2012,
   title={High power terahertz pulses generated in intense laser-plasma interactions},
   author={Yu-Tong, Li and Wei-Min, Wang and Chun, Li and Zheng-Ming, Sheng},
-  journal={Chinese Physics B},
+  journal={Chin. Phys. B},
   volume={21},
   number={9},
   pages={095203},
@@ -1659,7 +1659,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{han2000use,
   title={Use of the organic crystal DAST for terahertz beam applications},
   author={Han, PY and Tani, M and Pan, F and Zhang, X-C},
-  journal={Optics Letters},
+  journal={Opt. Lett.},
   volume={25},
   number={9},
   pages={675--677},
@@ -1669,7 +1669,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{brown1991oscillations,
   title={Oscillations up to 712 GHz in InAs/AlSb resonant-tunneling diodes},
   author={Brown, ER and S{\"o}derstr{\"o}m, JR and Parker, CD and Mahoney, LJ and Molvar, KM and McGill, TC},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={58},
   number={20},
   pages={2291--2293},
@@ -1751,7 +1751,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{heyman2001terahertz,
   title={Terahertz emission from GaAs and InAs in a magnetic field},
   author={Heyman, JN and Neocleous, P and Hebert, D and Crowell, PA and M{\"u}ller, T and Unterrainer, Karl},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={64},
   number={8},
   pages={085202},
@@ -1761,7 +1761,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{corchia2001effects,
   title={Effects of magnetic field and optical fluence on terahertz emission in gallium arsenide},
   author={Corchia, A and McLaughlin, R and Johnston, MB and Whittaker, DM and Arnone, DD and Linfield, EH and Davies, AG and Pepper, M},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={64},
   number={20},
   pages={205204},
@@ -1772,7 +1772,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{chang1970cw,
   title={CW submillimeter laser action in optically pumped methyl fluoride, methyl alcohol, and vinyl chloride gases},
   author={Chang, TY and Bridges, TJ and Burkhardt, EG},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={17},
   number={6},
   pages={249--251},
@@ -1783,7 +1783,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{auston1984cherenkov,
   title={Cherenkov radiation from femtosecond optical pulses in electro-optic media},
   author={Auston, DH and Cheung, KP and Valdmanis, JA and Kleinman, DA},
-  journal={Physical Review Letters},
+  journal={Phys. Rev. Lett.},
   volume={53},
   number={16},
   pages={1555},
@@ -1793,7 +1793,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{chen2007terahertz,
   title={Terahertz pulse generation from noble gases},
   author={Chen, Yunqing and Yamaguchi, Masashi and Wang, Mingfeng and Zhang, X-C},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={91},
   number={25},
   pages={251116},
@@ -1803,7 +1803,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{loffler2000generation,
   title={Generation of terahertz pulses by photoionization of electrically biased air},
   author={L{\"o}ffler, T and Jacob, F and Roskos, HG},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={77},
   number={3},
   pages={453--455},
@@ -1858,12 +1858,12 @@ lts.fzu.cz/pdf/d-js.pdf
   number={5854},
   pages={1291--1293},
   year={2007},
-  publisher={American Association for the Advancement of Science}
+  publisher={American Association for the Adv. Sci.}
 }
 @article{asada2008resonant,
   title={Resonant tunneling diodes for sub-terahertz and terahertz oscillators},
   author={Asada, Masahiro and Suzuki, Safumi and Kishimoto, Naomichi},
-  journal={Japanese Journal of Applied Physics},
+  journal={Japanese J. Appl. Phys.},
   volume={47},
   number={6R},
   pages={4375},
@@ -1890,7 +1890,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{tantiwanichapan2014graphene,
   title={Graphene on nanoscale gratings for the generation of terahertz Smith-Purcell radiation},
   author={Tantiwanichapan, Khwanchai and Wang, Xuanye and Swan, Anna K~and Paiella, Roberto},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={105},
   number={24},
   pages={241102},
@@ -1900,7 +1900,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{lewis2014review,
   title={A review of terahertz sources},
   author={Lewis, Roger A},
-  journal={Journal of Physics D: Applied Physics},
+  journal={J. Phys. D: Appl. Phys.},
   volume={47},
   number={37},
   pages={374001},
@@ -1935,7 +1935,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{riordan1997free,
   title={Free-space transient magneto-optic sampling},
   author={Riordan, JA and Sun, FG and Lu, ZG and Zhang, X-C},
-  journal={Applied Physics Letters},
+  journal={Appl. Phys. Lett.},
   volume={71},
   number={11},
   pages={1452--1454},
@@ -1970,7 +1970,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{farjadpour2006improving,
   title={Improving accuracy by subpixel smoothing in the finite-difference time domain},
   author={Farjadpour, Ardavan and Roundy, David and Rodriguez, Alejandro and Ibanescu, Mihai and Bermel, Peter and Joannopoulos, JD and Johnson, Steven G and Burr, GW},
-  journal={Optics Letters},
+  journal={Opt. Lett.},
   volume={31},
   number={20},
   pages={2972--2974},
@@ -1991,7 +1991,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{oskooi2011distinguishing,
   title={Distinguishing correct from incorrect PML proposals and a corrected unsplit PML for anisotropic, dispersive media},
   author={Oskooi, Ardavan and Johnson, Steven G},
-  journal={Journal of Computational Physics},
+  journal={J. Comput. Phys.},
   volume={230},
   number={7},
   pages={2369--2377},
@@ -2068,7 +2068,7 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 @misc{dominec2014_imagej,
 	author = {Dominec, Filip},
-	title = {Calculating size distribution of powder particles using ImageJ, \textit{http://f.dominec.eu/granulo/index.html}, Last visited {A}pril 2015},
+	title = {Calculating size distribution of powder particles using Image (IN)J, \textit{http://f.dominec.eu/granulo/index.html}, Last visited {A}pril 2015},
 	howpublished ={Online},
 }
 
@@ -2104,7 +2104,7 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 -- other non-simulation --
 @article{abramoff2004image,
-  title={Image processing with ImageJ},
+  title={Image (IN) processing with Image (IN)J},
   author={Abr{\`a}moff, Michael D and Magalh{\~a}es, Paulo J and Ram, Sunanda J},
   journal={Biophotonics international},
   volume={11},
@@ -2249,7 +2249,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{agranovich2006spatial,
   title={Spatial dispersion and negative refraction of light},
   author={Agranovich, Vladimir M and Gartstein, Yu N},
-  journal={Physics-Uspekhi},
+  journal={Phys. Usp.},
   volume={49},
   number={10},
   pages={1029},
@@ -2268,7 +2268,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{vinogradov2002form,
   title={On the form of constitutive equations in electrodynamics},
   author={Vinogradov, Aleksei P},
-  journal={Physics-Uspekhi},
+  journal={Phys. Usp.},
   volume={45},
   number={3},
   pages={331},
@@ -2278,7 +2278,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{golubkov1995boundary,
   title={Boundary conditions for electromagnetic field on the surface of media with weak spatial dispersion},
   author={Golubkov, Andrei Aleksandrovich and Makarov, Vladimir Anatol'evich},
-  journal={Physics-Uspekhi},
+  journal={Phys. Usp.},
   volume={38},
   number={3},
   pages={325--332},
@@ -2288,7 +2288,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{agranovich2004linear,
   title={Linear and nonlinear wave propagation in negative refraction metamaterials},
   author={Agranovich, VM and Shen, YR and Baughman, RH and Zakhidov, AA},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={69},
   number={16},
   pages={165112},
@@ -2314,7 +2314,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{bungay1993equivalency,
   title={Equivalency of the Casimir and the Landau-Lifshitz approaches to continuous-media electrodynamics and optical activity on reflection},
   author={Bungay, AR and Svirko, Yu P and Zheludev, NI},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={47},
   number={18},
   pages={11730},
@@ -2324,7 +2324,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{fietz2010current,
   title={Current-driven metamaterial homogenization},
   author={Fietz, Chris and Shvets, Gennady},
-  journal={Physica B: Condensed Matter},
+  journal={Physica B},
   volume={405},
   number={14},
   pages={2930--2934},
@@ -2349,7 +2349,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{makarov2004permittivity,
   title={The permittivity of a monatomic gas with spatial dispersion},
   author={Makarov, VP and Rukhadze, AA},
-  journal={Journal of Experimental and Theoretical Physics},
+  journal={J. Exp. Theor. Phys.},
   volume={98},
   number={2},
   pages={305--315},
@@ -2378,7 +2378,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{belov2003strong,
   title={Strong spatial dispersion in wire media in the very large wavelength limit},
   author={Belov, PA and Marques, R and Maslovski, SI and Nefedov, IS and Silveirinha, M and Simovski, CR and Tretyakov, SA},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={67},
   number={11},
   pages={113103},
@@ -2398,7 +2398,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{lindell2001bw,
   title={BW media—Media with negative parameters, capable of supporting backward waves},
   author={Lindell, Ismo V and Tretyakov, SA and Nikoskinen, KI and Ilvonen, S},
-  journal={Microwave and Optical Technology Letters},
+  journal={Microwave Opt. Technol. Lett.},
   volume={31},
   number={2},
   pages={129--133},
@@ -2421,7 +2421,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{rockstuhl2008transition,
   title={Transition from thin-film to bulk properties of metamaterials},
   author={Rockstuhl, Carsten and Paul, Thomas and Lederer, Falk and Pertsch, Thomas and Zentgraf, Thomas and Meyrath, Todd P and Giessen, Harald},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={77},
   number={3},
   pages={035126},
@@ -2431,7 +2431,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{paul2011reflection,
   title={Reflection and transmission of light at periodic layered metamaterial films},
   author={Paul, Thomas and Menzel, Christoph and {\'S}migaj, Wojciech and Rockstuhl, Carsten and Lalanne, Philippe and Lederer, Falk},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={84},
   number={11},
   pages={115142},
@@ -2450,7 +2450,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{andryieuski2012bloch,
   title={Bloch-mode analysis for retrieving effective parameters of metamaterials},
   author={Andryieuski, Andrei and Ha, Sangwoo and Sukhorukov, Andrey A and Kivshar, Yuri S and Lavrinenko, Andrei V},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={86},
   number={3},
   pages={035127},
@@ -2470,7 +2470,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{simovski2009material,
   title={Material parameters of metamaterials (a review)},
   author={Simovski, C R},
-  journal={Optics and Spectroscopy},
+  journal={Opt. Spectrosc.},
   volume={107},
   number={5},
   pages={726--753},
@@ -2480,7 +2480,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{simovski2011electromagnetic,
   title={On electromagnetic characterization and homogenization of nanostructured metamaterials},
   author={Simovski, Constantin R},
-  journal={Journal of Optics},
+  journal={J. Opt.},
   volume={13},
   number={1},
   pages={013001},
@@ -2510,7 +2510,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{kirzhnitz1976,
   title={},
   author={},
-  journal={Physics-Uspekhi},
+  journal={Phys. Usp.},
   volume={119},
   number={2},
   pages={357--369},
@@ -2519,7 +2519,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{melrose1977generalised,
   title={Generalised Kramers-Kronig formula for spatially dispersive media},
   author={Melrose, DB and Stoneham, RJ},
-  journal={Journal of Physics A: Mathematical and General},
+  journal={J. Phys. A: Math. Gen.},
   volume={10},
   number={1},
   pages={L17},
@@ -2539,7 +2539,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{rozanov2003,
   title={On dispersion relations for optical media with spatial dispersion},
   author={Rozanov, N. N.},
-  journal={Optics and Spectroscopy},
+  journal={Opt. Spectrosc.},
   volume={97},
   number={2},
   pages={297--298},
@@ -2577,7 +2577,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{sun2009effective,
   title={Effective-medium properties of metamaterials: a quasimode theory},
   author={Sun, Shulin and Chui, ST and Zhou, Lei},
-  journal={Physical Review E},
+  journal={Phys. Rev. E},
   volume={79},
   number={6},
   pages={066604},
@@ -2597,7 +2597,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{smigaj2008validity,
   title={Validity of the effective-medium approximation of photonic crystals},
   author={{\'S}migaj, Wojciech and Gralak, Boris},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={77},
   number={23},
   pages={235445},
@@ -2608,7 +2608,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{petschulat2008multipole,
   title={Multipole approach to metamaterials},
   author={Petschulat, Joerg and Menzel, C and Chipouline, A and Rockstuhl, C and T{\"u}nnermann, A and Lederer, F and Pertsch, T},
-  journal={Physical Review A},
+  journal={Phys. Rev. A},
   volume={78},
   number={4},
   pages={043811},
@@ -2637,7 +2637,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{bragg1913reflection,
   title={The reflection of X-rays by crystals},
   author={Bragg, WH and Bragg, WL},
-  journal={Proceedings of the Royal Society of London. Series A, Containing Papers of a Mathematical and Physical Character},
+  journal={Proc. Roy. Soc. London. Series A, Containing Papers of a Mathematical and Physical Character},
   pages={428--438},
   year={1913},
   publisher={JSTOR}
@@ -2645,7 +2645,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{friedrich1913interferenzerscheinungen,
   title={Interferenzerscheinungen bei roentgenstrahlen},
   author={Friedrich, Walter and Knipping, Paul and Laue, Max},
-  journal={Annalen der Physik},
+  journal={Ann. Phys.},
   volume={346},
   number={10},
   pages={971--988},
@@ -2700,7 +2700,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{rayleigh1892,
   title={On the influence of obstacles arranged in rectangular order upon the properties of a medium},
   author={Rayleigh, Lord},
-  journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  journal={The London, Edinburgh, and Dublin Philos. Mag. and Journal of Science},
   volume={34},
   number={211},
   pages={481--502},
@@ -2737,7 +2737,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{brown1955properties,
   title={The properties of artificial dielectrics at centimetre wavelengths},
   author={Brown, John and Jackson, Willis},
-  journal={Proceedings of the IEE-Part B: Radio and Electronic Engineering},
+  journal={Proceedings of the IEE-Part B: Radio Electron. Eng.ing},
   volume={102},
   number={1},
   pages={11--16},
@@ -2778,7 +2778,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{bose1898rotation,
   title={On the rotation of plane of polarisation of electric waves by a twisted structure},
   author={Bose, Jagadis Chunder},
-  journal={Proceedings of the Royal Society of London},
+  journal={Proc. Roy. Soc. London},
   volume={63},
   number={389-400},
   pages={146--152},
@@ -2808,7 +2808,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{basharin2013epsilon,
   title={Epsilon near zero based phenomena in metamaterials},
   author={Basharin, Alexey A and Mavidis, Charalampos and Kafesaki, Maria and Economou, Eleftherios N and Soukoulis, Costas M},
-  journal={Physical Review B},
+  journal={Phys. Rev. B},
   volume={87},
   number={15},
   pages={155130},
@@ -2833,7 +2833,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   number={5801},
   pages={977--980},
   year={2006},
-  publisher={American Association for the Advancement of Science}
+  publisher={American Association for the Adv. Sci.}
 }
 @article{valentine2009optical,
   title={An optical cloak made of dielectrics},
@@ -2849,7 +2849,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{wang2010composite,
   title={Composite left/right-handed stacked hole arrays at submillimeter wavelengths},
   author={Wang, Shengxiang and Garet, Fr{\'e}d{\'e}ric and Blary, Karine and Cro{\"e}nne, Charles and Lheurette, Eric and Coutaz, Jean-Louis and Lippens, Didier},
-  journal={Journal of Applied Physics},
+  journal={J. Appl. Phys.},
   volume={107},
   number={7},
   pages={074510},
@@ -2881,7 +2881,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{wang2013homogeneous,
   title={Homogeneous anisotropic dielectric invisibility carpet cloak made of Al2O3 plates},
   author={Wang, Ning and Mukhtar, Musawwadah and Ma, Yungui and Huang, Ruifeng and Ong, CK},
-  journal={EPL (Europhysics Letters)},
+  journal={EPL (Europhys. Lett.)},
   volume={104},
   number={1},
   pages={14003},
@@ -2901,7 +2901,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{silin1978possibility,
   title={Possibility of creating plane-parallel lenses},
   author={Silin, RA},
-  journal={Optics and Spectroscopy},
+  journal={Opt. Spectrosc.},
   volume={44},
   pages={109--110},
   year={1978}
@@ -2938,7 +2938,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{tassin2012comparison,
   title={A comparison of graphene, superconductors and metals as conductors for metamaterials and plasmonics},
   author={Tassin, Philippe and Koschny, Thomas and Kafesaki, Maria and Soukoulis, Costas M},
-  journal={Nature Photonics},
+  journal={Nat. Photonics},
   volume={6},
   number={4},
   pages={259--264},
